--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+/* 
+Colours:
+#ffffff -- white
+#010025 -- black
+#ea485d -- red
+#ffeb98 -- yellow
+#ff9138 -- orange
+
+Colours palette from:
+https://howdns.works/
+*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,8 +17,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #222222;
-  color: #eeeeee;
+  /* background-color: #ffffff; */
+  color: #010025;
 }
 
 code {
