--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,14 +3,24 @@ Colours:
 #ffffff -- white
 #010025 -- black
 #ea485d -- red
-#ffeb98 -- yellow
 #ff9138 -- orange
+#ffeb98 -- yellow
+#00cfea -- blue
 
 Colours palette from:
 https://howdns.works/
 */
 
+:root {
+  --white: #ffffff;
+  --black: #010025;
+  --red: #ea485d;
+  --orange: #ff9138;
+  --yellow: #ffeb98;
+  --blue: #00cfea;
+}
+
 .App {
-  color: #010025;
-  /* background-color: #ffffff; */
+  color: var(--black);
+  background-color: var(--white);
 }
