--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,14 +1,29 @@
 .Categories {
   margin: 1em auto 0;
+
   text-align: center;
+
   width: 90%;
   max-width: 960px;
 }
 
 button {
-  color: inherit;
-  font-family: inherit;
-  font-weight: 500;
   margin: 0.33em;
   padding: 0.25em 0.75em;
+  font-family: inherit;
+  font-weight: 700;
+  cursor: pointer;
+  color: var(--white);
+  background-color: var(--blue);
+  border: none;
+  border-radius: 0.25em;
+  transition: all 0.1s;
+}
+
+button:hover {
+  background-color: var(--red);
+}
+
+.selected {
+  background-color: var(--red);
 }
