--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -1,5 +1,24 @@
 .ProductList {
-  margin-top: 2em;
-  display: flex;
-  flex-flow: row wrap;
+  margin: 2em auto 0;
+  max-width: 1280px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+@media only screen and (max-width: 950px) {
+  .ProductList {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .ProductList {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .ProductList {
+    grid-template-columns: 1fr;
+  }
 }
