--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -1,11 +1,12 @@
 .ProductList {
-  margin: 2em auto 0;
+  margin: 2em auto;
   max-width: 1280px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 2em;
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 992px) {
   .ProductList {
     grid-template-columns: repeat(3, 1fr);
   }
