--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -16,11 +16,11 @@
   background-color: var(--blue);
   border: none;
   border-radius: 0.25em;
+  transition: background-color 0.1s ease;
 }
 
 .Categories button:hover {
   background-color: var(--red);
-  transition: background-color 0.1s;
 }
 
 .Categories .selected {
